--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^15.0.2",
     "react-addons-pure-render-mixin": "^15.0.2",
     "react-dom": "^15.0.2",
-    "react-mounter": "^1.2.0"
+    "react-mounter": "^1.2.0",
+    "react-router": "^2.4.0"
   }
 }
