--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "classnames": "^2.2.3",
     "d3": "^3.5.17",
     "react": "^15.0.2",
