--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
     "react-mounter": "^1.2.0",
     "react-router": "^2.4.0",
     "underscore": "^1.8.3"
+  },
+  "devDependencies": {
+    "eslint": "^3.8.1",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-import": "^2.0.1",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.4.1"
   }
 }
