--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "devDependencies": {
     "eslint": "^3.8.1",
     "eslint-config-airbnb": "^12.0.0",
+    "eslint-import-resolver-meteor": "^0.3.4",
     "eslint-plugin-import": "^2.0.1",
     "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-meteor": "^4.0.1",
     "eslint-plugin-react": "^6.4.1"
   }
 }
